# ReelRipper

./: .gitignore  index.html  package-lock.json  package.json
python-scraper/: requirements.txt  scraper_ipc.py
src/: App.css  App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/core/: auth.rs  config.rs  database.rs  downloader.rs  filename.rs  queue.rs
src-tauri/src/sidecar/: scraper.rs
src/components/: Navigation.tsx
src/pages/: History.tsx  Library.tsx  Login.tsx  Queue.tsx  Settings.tsx
