[package]
name = "reelripper"
version = "0.1.0"
description = "ReelRipper desktop app"
authors = ["ReelRipperTeam"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }
serde_json = "1.0"
embed-resource = "2.5"

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }
futures-util = "0.3"
directories = "5.0"
keyring = "2.1"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
